@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Tue, 22 Oct 2024 12:08:38 +0800</lastBuildDate>
+  <lastBuildDate>Tue, 22 Oct 2024 12:10:07 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -266,5 +266,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>K-pop傳奇 Cho Yong-pil 推出第20張錄音室專輯...</description>
   <category>K-Pop</category>
   <pubDate>Tue, 22 Oct 2024 12:08:38 +0800</pubDate>
+</item><item>
+  <title>金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格</title>
+  <link>https://www.famechos.me/news/金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格.html</link>
+  <description>金在中製作的首支K-pop女團Say My Name出道。Say My Name是由K-pop歌手金在中製作的首支K-pop女團，於星期三出道，推出首張迷你專輯《Say My Name》。...</description>
+  <category>K-Pop</category>
+  <pubDate>Tue, 22 Oct 2024 12:10:07 +0800</pubDate>
 </item></channel>
 </rss>
