@@ -1,0 +1,263 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u91d1\u5728\u4e2d\u9996\u652fK-pop\u5973\u5718Say My Name\u51fa\u9053\uff01\u4e03\u4f4d\u6210\u54e1\u8de8\u570b\u7d44\u5408\u5c55\u73fe\u591a\u6a23\u97f3\u6a02\u98a8\u683c", "description": "\u91d1\u5728\u4e2d\u9996\u652fK-pop\u5973\u5718Say My Name\u51fa\u9053\uff01\u4e03\u4f4d\u6210\u54e1\u8de8\u570b\u7d44\u5408\u5c55\u73fe\u591a\u6a23\u97f3\u6a02\u98a8\u683c", "url": "https://www.famechos.me/news/\u91d1\u5728\u4e2d\u9996\u652fK-pop\u5973\u5718Say My Name\u51fa\u9053\uff01\u4e03\u4f4d\u6210\u54e1\u8de8\u570b\u7d44\u5408\u5c55\u73fe\u591a\u6a23\u97f3\u6a02\u98a8\u683c.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T12:09:59.567418+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格.html"/>
+<meta name="description" content="韓國偶像金在中旗下首支K-pop女團Say My Name正式出道！七位來自不同國家的成員組合，展現多樣化的音樂風格，引發樂迷熱烈期待。">
+
+<meta name="keywords" content="金在中,Say My Name,K-pop,女團,出道,跨國組合,音樂風格">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格.html" />
+        <meta property="og:title" content="金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格" />
+        <meta property="og:description" content="金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格" />
+        <meta property="twitter:description" content="金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>Say My Name是由K-pop歌手金在中製作的首支K-pop女團，於星期三出道，推出首張迷你專輯《Say My Name》。</p>
+<p>金在中表示，Say My Name的動機是聽到粉絲喊出他們的名字，團隊名稱代表著他們奔向夢想的雄心壯志。他們旨在展示新鮮多樣的音樂風格，以及每位成員在出道專輯中的獨特色彩。</p>
+<p>Say My Name由七位成員組成，來自不同的文化背景，包括兩位日本成員Hitomi和Mei，一位泰國成員Kanny和四位韓國成員Soha、Dohee、Junhwi和Seungjoo。</p>
+<p>Dohee表示，每位成員都有不同的個性和特徵，但他們的優勢在於如何在不衝突的情況下融合在一起。他們的技能互相補充，每位成員都有獨特的聲音和音調，使他們能夠在每首歌中表達自己不同的方式。</p>
+<p>該團隊首次在舞台上表演了出道專輯的主打歌《WaveWay》和B面曲《I Will Be the Brightest Star in the Sky Tonight》。Soha表示，主打歌反映了克服挑戰和成長的旅程，憑藉其積極和光明的歌詞，這首歌傳達了他們勇敢的精神和克服逆境、向前邁進的決心。</p>
+<p>團隊領袖Hitomi參與了《I Will Be the Brightest Star in the Sky Tonight》的歌詞創作，希望有一天能夠成為K-pop界最成功的藝人之一。</p><h2>Hitomi第三次出道：追求夢想不放棄</h2>
+<p>對於Hitomi來說，這次出道更有意義，因為這是她第三次出道。之前，她曾於2014年作為J-pop女團AKB48的成員出道，然後於2018年作為項目K-pop女團IZ*ONE的成員出道。</p>
+<p>Hitomi表示，這次出道對她來說是一個巨大的挑戰，但她把挑戰看作是擴大她的可能性。她強調，如果她有未來想要實現的夢想，她不會放棄，並希望繼續追求她的夢想。</p>
+<p>Say My Name希望他們的專輯能夠讓聽眾體驗到從未感受過的情感。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_j_KlbJlSzc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/巫術驚悚片《屍啟》震驚西班牙！拿下錫切斯國際奇幻電影節大獎，1200萬觀眾為何瘋狂.html">巫術驚悚片《屍啟》震驚西班牙！拿下錫切斯國際奇幻電影節大獎，1200萬觀眾為何瘋狂</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP十一月大爆發！BTS成員Jin個人專輯、ENHYPEN新專輯、VIVIZ迷你專輯齊發.html">KPOP十一月大爆發！BTS成員Jin個人專輯、ENHYPEN新專輯、VIVIZ迷你專輯齊發</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！.html">K-pop大熱：Le Sserafim、NCT在玹、StayC、Seventeen等強勢回歸！</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
