@@ -302,4 +302,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/金在中首支K-pop女團Say My Name出道！七位成員跨國組合展現多樣音樂風格.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T12:10:07+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
